--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,20 @@
+.body {
+    background-color: black;
+}
+
 .tab-content {
     margin-top: 56px;
-    
 }
+
 .tab-pane {
     padding: 0;
+}
+
+.card {
+    padding: 0;
+}
+
+#basket {
+   /* padding: 5vh 10vw 5vh 10vw; */
+   padding: 0;
 }
