--- a/css/basketball.css
+++ b/css/basketball.css
@@ -15,12 +15,16 @@ footer.page-footer {
   margin: 0;
 }
 
-main div#roster.scrollspy.container {
+main div#roster.container, main div#coaching-staff.container {
   padding-top: 48px;
 }
 
-.tabs .tab a:hover, .tabs .tab a.active {
+.tabs .tab a:hover, .tabs .tab a.active{
   color: teal;
+}
+
+.indicator {
+  background-color: teal !important;
 }
       
 .tabs .tab a {
