--- a/css/index.css
+++ b/css/index.css
@@ -65,3 +65,7 @@ main div#roster.scrollspy.container {
 .uppercase {
   text-transform: uppercase;
 }
+
+.footer-copyright a{
+  color: white !important;
+}
